Use `quoteVolume` for calculations and adjust volume thresholds in trading logic.